--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -8,6 +8,7 @@
 }
 
 .main {
+  background: red;
   padding: 5rem 0;
   flex: 1;
   display: flex;
@@ -19,6 +20,7 @@
 .footer {
   width: 100%;
   height: 100px;
+  background: #0070f3;
   border-top: 1px solid #eaeaea;
   display: flex;
   justify-content: center;
